--- a/NLP_Projekt.ipynb
+++ b/NLP_Projekt.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWQHtElox3AwsXdsdsMYcB",
+      "authorship_tag": "ABX9TyPrq996K8QCSXuWL9JUV8I3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,7 @@
       "metadata": {
         "id": "tHm3qv_HRuLD"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "ceFAumLERxGu"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
       "metadata": {
         "id": "acG2NVmpR1W7"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -258,7 +258,7 @@
       "metadata": {
         "id": "yJhfUq60R321"
       },
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -319,22 +319,10 @@
         "print(f\"Film adatbázis mérete: {len(df)} film\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9q52C_RN8Rtz",
-        "outputId": "f3544820-0ffb-4128-8d50-fddc2060885c"
+        "id": "9q52C_RN8Rtz"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Film adatbázis mérete: 200 film\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -361,69 +349,6 @@
       ],
       "metadata": {
         "id": "SzOgpNeN8hUZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Melyek a leggyakoribb műfajok az adathalmazban?"
-      ],
-      "metadata": {
-        "id": "nvzF4pdT8kyo"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from collections import Counter\n",
-        "\n",
-        "genre_counts = Counter(\", \".join(df['genres']).split(\", \"))\n",
-        "print(\"Műfajok gyakorisága:\")\n",
-        "for genre, count in genre_counts.most_common():\n",
-        "    print(f\"{genre}: {count}\")\n",
-        "\n",
-        "# Műfajok megjelenítése oszlopdiagramon\n",
-        "plt.bar(genre_counts.keys(), genre_counts.values())\n",
-        "plt.title(\"Műfajok gyakorisága\")\n",
-        "plt.xlabel(\"Műfajok\")\n",
-        "plt.ylabel(\"Előfordulások száma\")\n",
-        "plt.xticks(rotation=45)\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "Tmo125Ty8nne"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Átlagos hasonlóság az ajánlásokban"
-      ],
-      "metadata": {
-        "id": "FpkXcQjL86Ni"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def average_similarity(title, cosine_sim=cosine_sim):\n",
-        "    idx = df[df['title'] == title].index[0]\n",
-        "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
-        "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
-        "    sim_scores = sim_scores[1:6]  # Top 5 ajánlás\n",
-        "    avg_sim = sum([score[1] for score in sim_scores]) / len(sim_scores)\n",
-        "    return avg_sim\n",
-        "\n",
-        "df['average_similarity'] = df['title'].apply(average_similarity)\n",
-        "print(\"Átlagos hasonlóság az ajánlások között:\")\n",
-        "print(df[['title', 'average_similarity']])"
-      ],
-      "metadata": {
-        "id": "SST22MGY87IF"
       },
       "execution_count": null,
       "outputs": []
@@ -522,6 +447,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Legnépszerűbb műfajok"
+      ],
+      "metadata": {
+        "id": "aVw_-T09XIgY"
+      }
     },
     {
       "cell_type": "code",
